Added Common back in for favicon and robots.txt. Removed default scaffolding html and references to templates. Cleaned out Handler.Home.

--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -67,6 +67,7 @@ library
       Application
       Foundation
       Handler.Home
+      Handler.Common
       Import
       Import.NoFoundation
       Model
