--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -65,6 +65,7 @@ library
     ghc-options: -Wall -fwarn-tabs -O2
   exposed-modules:
       Application
+      Book
       Foundation
       Handler.Home
       Handler.Common
@@ -75,6 +76,7 @@ library
       Settings
       Settings.StaticFiles
   default-language: Haskell2010
+  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses
 
 executable pkcloud-accounts
   main-is: main.hs
