--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -28,9 +28,10 @@ library
     , yesod-auth >=1.4.0 && <1.5
     , yesod-static >=1.4.0.3 && <1.6
     , yesod-form >=1.4.0 && <1.5
+    , bytestring >=0.9 && <0.11
     , classy-prelude >=0.10.2
     , classy-prelude-conduit >=0.10.2
-    , bytestring >=0.9 && <0.11
+    , esqueleto
     , text >=0.11 && <2.0
     , persistent >=2.0 && <2.8
     , persistent-postgresql >=2.1.1 && <2.8
