--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -68,6 +68,7 @@ library
       Application
       Book
       Foundation
+      Handler.Account.Create
       Handler.Home
       Handler.Common
       Handler.Book
@@ -77,7 +78,7 @@ library
       Settings
       Settings.StaticFiles
   default-language: Haskell2010
-  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses
+  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts
 
 executable pkcloud-accounts
   main-is: main.hs
