--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -22,6 +22,7 @@ library
       src
   build-depends:
       base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
+    , blaze-html
     , blaze-markup
     , classy-prelude-yesod >=0.10.2 && <1.0 || >=1.1
     , yesod >=1.4.3 && <1.5
@@ -75,6 +76,7 @@ library
       Handler.Common
       Handler.Folder.Create
       Handler.Home
+      Handler.Transaction.Create
       Import
       Import.NoFoundation
       Model
