--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -83,6 +83,7 @@ library
       Model
       Settings
       Settings.StaticFiles
+      Types
   default-language: Haskell2010
   extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts, ScopedTypeVariables
 
