--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -24,36 +24,37 @@ library
       base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
     , blaze-html
     , blaze-markup
-    , classy-prelude-yesod >=0.10.2 && <1.0 || >=1.1
-    , yesod >=1.4.3 && <1.5
-    , yesod-core >=1.4.30 && <1.5
-    , yesod-auth >=1.4.0 && <1.5
-    , yesod-static >=1.4.0.3 && <1.6
-    , yesod-form >=1.4.0 && <1.5
-    , bytestring >=0.9 && <0.11
-    , classy-prelude >=0.10.2
-    , classy-prelude-conduit >=0.10.2
+    , classy-prelude-yesod
+    , yesod
+    , yesod-core
+    , yesod-auth
+    , yesod-static
+    , yesod-form
+    , bytestring
+    , classy-prelude
+    , classy-prelude-conduit
     , esqueleto
-    , text >=0.11 && <2.0
-    , persistent >=2.0 && <2.8
-    , persistent-postgresql >=2.1.1 && <2.8
-    , persistent-template >=2.0 && <2.8
+    , text
+    , persistent
+    , persistent-postgresql
+    , persistent-template
     , template-haskell
-    , shakespeare >=2.0 && <2.1
-    , hjsmin >=0.1 && <0.3
-    , monad-control >=0.3 && <1.1
-    , wai-extra >=3.0 && <3.1
-    , yaml >=0.8 && <0.9
-    , http-conduit >=2.1 && <2.3
-    , directory >=1.1 && <1.4
-    , warp >=3.0 && <3.3
+    , shakespeare
+    , hjsmin
+    , monad-control
+    , wai-extra
+    , yaml
+    , http-conduit
+    , directory
+    , warp
     , data-default
-    , aeson >=0.6 && <1.3
-    , conduit >=1.0 && <2.0
-    , monad-logger >=0.3 && <0.4
-    , fast-logger >=2.2 && <2.5
-    , wai-logger >=2.2 && <2.4
+    , aeson
+    , conduit
+    , monad-logger
+    , fast-logger
+    , wai-logger
     , file-embed
+    , foreign-store
     , safe
     , unordered-containers
     , containers
@@ -96,35 +97,36 @@ executable pkcloud-accounts
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      base >=4.8.2.0 && <4.9 || >=4.9.1.0 && <5
-    , classy-prelude-yesod >=0.10.2 && <1.0 || >=1.1
-    , yesod >=1.4.3 && <1.5
-    , yesod-core >=1.4.30 && <1.5
-    , yesod-auth >=1.4.0 && <1.5
-    , yesod-static >=1.4.0.3 && <1.6
-    , yesod-form >=1.4.0 && <1.5
-    , classy-prelude >=0.10.2
-    , classy-prelude-conduit >=0.10.2
-    , bytestring >=0.9 && <0.11
-    , text >=0.11 && <2.0
-    , persistent >=2.0 && <2.8
-    , persistent-postgresql >=2.1.1 && <2.8
-    , persistent-template >=2.0 && <2.8
+      base
+    , classy-prelude-yesod
+    , foreign-store
+    , yesod
+    , yesod-core
+    , yesod-auth
+    , yesod-static
+    , yesod-form
+    , classy-prelude
+    , classy-prelude-conduit
+    , bytestring
+    , text
+    , persistent
+    , persistent-postgresql
+    , persistent-template
     , template-haskell
-    , shakespeare >=2.0 && <2.1
-    , hjsmin >=0.1 && <0.3
-    , monad-control >=0.3 && <1.1
-    , wai-extra >=3.0 && <3.1
-    , yaml >=0.8 && <0.9
-    , http-conduit >=2.1 && <2.3
-    , directory >=1.1 && <1.4
-    , warp >=3.0 && <3.3
+    , shakespeare
+    , hjsmin
+    , monad-control
+    , wai-extra
+    , yaml
+    , http-conduit
+    , directory
+    , warp
     , data-default
-    , aeson >=0.6 && <1.3
-    , conduit >=1.0 && <2.0
-    , monad-logger >=0.3 && <0.4
-    , fast-logger >=2.2 && <2.5
-    , wai-logger >=2.2 && <2.4
+    , aeson
+    , conduit
+    , monad-logger
+    , fast-logger
+    , wai-logger
     , file-embed
     , safe
     , unordered-containers
