--- a/stack.yaml
+++ b/stack.yaml
@@ -15,7 +15,7 @@
 # resolver:
 #  name: custom-snapshot
 #  location: "./custom-snapshot.yaml"
-resolver: lts-9.2
+resolver: lts-12.2 # lts-10.6 # lts-12.2 # lts-9.2
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -36,10 +36,34 @@ resolver: lts-9.2
 # non-dependency (i.e. a user package), and its test suites and benchmarks
 # will not be run. This is useful for tweaking upstream packages.
 packages:
+- ../esqueleto
 - .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps:
+
+
+        # - persistent-2.8.1
+        # - persistent-mysql-2.8.1
+        # - persistent-postgresql-2.8.1
+        # - persistent-sqlite-2.8.1
+        # - conduit-1.3.0
+        # - conduit-extra-1.3.0
+        # - resourcet-1.2.0
+
+        # - conduit-1.2.13.1
+        # - persistent-2.7.3.1
+        # - persistent-postgresql-2.6.3
+        # - resourcet-1.1.11
+        # 
+# - conduit-1.3.0
+# - persistent-2.8.1
+# - persistent-postgresql-2.8.1
+# - resourcet-1.2.0
+
+        # - persistent-mysql-2.8.1
+        # - persistent-sqlite-2.8.1
+        # - conduit-extra-1.3.0
 
 # Override default flag values for local packages and extra-deps
 flags: {}
