open latest book by default

--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -76,6 +76,7 @@ library
       Handler.Account
       Handler.Account.Create
       Handler.Book
+      Handler.Books
       Handler.Common
       Handler.Folder.Create
       Handler.Home
