--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -90,7 +90,7 @@ library
       Settings.StaticFiles
       Types
   default-language: Haskell2010
-  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts, ScopedTypeVariables
+  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts, ScopedTypeVariables, RecordWildCards
 
 executable pkcloud-accounts
   main-is: main.hs
