--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -98,6 +98,7 @@ library
       Settings
       Settings.StaticFiles
       Types
+      Types.Classes
   default-language: Haskell2010
   extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts, ScopedTypeVariables, RecordWildCards
 
