work on refactoring for getTransactionR

--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -71,6 +71,7 @@ library
       Account
       Application
       Book
+      FrequentTransaction
       Folder
       Foundation
       Handler.Account
