--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -104,7 +104,7 @@ library
       Types.Classes
       Transaction
   default-language: Haskell2010
-  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts, ScopedTypeVariables, RecordWildCards
+  extensions: NoImplicitPrelude, ViewPatterns, OverloadedStrings, TemplateHaskell, QuasiQuotes, TypeFamilies, MultiParamTypeClasses, FlexibleContexts, ScopedTypeVariables, RecordWildCards, LambdaCase
 
 executable pkcloud-accounts
   main-is: main.hs
