--- a/pkcloud-accounts.cabal
+++ b/pkcloud-accounts.cabal
@@ -29,8 +29,9 @@ library
     , yesod-core
     , yesod-auth
     , yesod-auth-hashdb
-    , yesod-static
     , yesod-form
+    , yesod-persistent
+    , yesod-static
     , bytestring
     , classy-prelude
     , classy-prelude-conduit
